Bug 49291 - CRASH at menu Tools - Macros
Summary: CRASH at menu Tools - Macros
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:3.6.0
Keywords: regression
: 49718 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-04-29 23:12 UTC by Rainer Bielefeld Retired
Modified: 2012-06-03 21:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 'master_04-17_run_macro_python.png' (104.17 KB, image/png)
2012-05-10 04:13 UTC, manj_k
Details
Backtrace of crash of current LO master on Fedora 17 x86-64 (8.05 KB, text/plain)
2012-05-31 01:40 UTC, Stephan Bergmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-04-29 23:12:20 UTC
I checked with parallel installation of Master "LOdev 3.6.0alpha0+ – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 52348aa]" (tinderbox: Win-x86@6-fast, pull time 2012-04-27 21:25:23) in Calc and Writer. LibO crashes when I click menu 'Tools -> Macros', sometimes immediately, sometimes I first have to test an other menu item with sub items (like 'Update' or 'Protect Document')
Even mousover / hovering menu item 'Macros' will crash after few attempts
Comment 1 Rainer Bielefeld Retired 2012-04-29 23:19:12 UTC
MinGW Master 2012-04-26 crashes with Error Message "Microsoft Visual C++  This application has requested the runtime to terminate it in an unusual way"
Comment 2 manj_k 2012-04-30 01:07:02 UTC
Reproducible (on WinXP 32b) with

- LibO-Dev_3.6.0alpha0 (Build ID: 52348aa) · Win-x86@6-fast · pull time 2012-04-27 21:25:23

- LibO-Dev_3.6.0alpha0 (Build ID: c0a4c46) · Win-x86@6-fast · pull time 2012-04-29 01:16:37.


Doesn't crash with
- LibO-Dev_3.6.0alpha0 (Build ID: 6697465) · Win-x86@6-fast · pull time 2012-04-17 23:05:35.
Comment 3 pz1 2012-05-07 02:38:54 UTC
I can confirm that this is happening with last night's build on both WinXP and Win7. In both cases I observe that in the Option-Java setting the JRE is not recognised. Maybe causal relation? On both machines LO 3.5.3 has no problems.
Comment 4 pz1 2012-05-07 02:40:59 UTC
(In reply to comment #3)
> I can confirm that this is happening with last night's build on both WinXP and
> Win7. In both cases I observe that in the Option-Java setting the JRE is not
> recognised. Maybe causal relation? On both machines LO 3.5.3 has no problems.

Forgot to mention that the JRE issue has been reported under 48946 and 49275
Comment 5 manj_k 2012-05-10 03:03:48 UTC
*** Bug 49718 has been marked as a duplicate of this bug. ***
Comment 6 pz1 2012-05-10 03:14:34 UTC
I suspect this bug is caused by the fact that the JRE is not fond as reported in issue 48946. Shouldn't it be reported as a dependency here?
Comment 7 manj_k 2012-05-10 04:12:23 UTC
(In reply to comment #6)
> I suspect this bug is caused by the fact that the JRE is not fond as reported
> in issue 48946. Shouldn't it be reported as a dependency here?


Sample: master~2012-04-17_23.05.35_LibO-Dev_3.6.0alpha0

tinderbox: buildname: Win-x86@6-fast
tinderbox: tree: MASTER
tinderbox: pull time 2012-04-17 23:05:35
core:66974653c0635e9e13a277e22da33e7f2062e674
binfilter:af20ea3f8376a9d29d00d06b106fc49ca85377af


(1) Has been affected by bug 48946 (not able to autodetect/add JRE).

(2) But doesn't crash with regard to 'Tools > Macro'
(see attached screenshot 'master_04-17_run_macro_python.png').
Comment 8 manj_k 2012-05-10 04:13:24 UTC
Created attachment 61349 [details]
Screenshot 'master_04-17_run_macro_python.png'
Comment 9 pz1 2012-05-10 05:14:31 UTC
(In reply to comment #7)
 
> (2) But doesn't crash with regard to 'Tools > Macro'
> (see attached screenshot 'master_04-17_run_macro_python.png').
I am convinced, no simple dependency. It seems to be more complicated apparantly.
Comment 10 Stephan Bergmann 2012-05-31 01:36:47 UTC
To reproduce, make sure no Java is available in LO (i.e., "Tools - Options... - LibreOffice - Java - Use a Java runtime environment" is unchecked; you potentially need to restart LO after unchecking it to let that change have an effect).  Then, selecting the "Tools" menu and moving the mouse to the "Macros" sub-menu will display an "Enable JRE" dialog and will easily crash or freeze LO shortly after.
Comment 11 Stephan Bergmann 2012-05-31 01:40:58 UTC
Created attachment 62316 [details]
Backtrace of crash of current LO master on Fedora 17 x86-64
Comment 12 Not Assigned 2012-06-01 01:09:03 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c16d0dd846e25df56feffe868a15eb33bb55e42a

fdo#49291 Postpone actual factory instantiation as long as possible
Comment 13 Rainer Bielefeld Retired 2012-06-03 21:35:47 UTC
Works fine with server-installation of Master "LOdev 3.6.0alpha1+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: bfa9061]" (tinderbox: Win-x86@6-fast, pull time 2012-06-02 23:56:11)